Fix various spelling errors found by lintian

--- a/doc/gdl.1
+++ b/doc/gdl.1
@@ -78,7 +78,7 @@ specified more than once)
 Tells COMMAND_LINE_ARGS() to report all following arguments
 .TP
 .B \-e statement
-Execute given statement and exit (last occurance taken into account
+Execute given statement and exit (last occurrence taken into account
 only, executed after startup file, may not be specified together with
 batch files)
 .TP
