--- a/resource/maps/README
+++ b/resource/maps/README
@@ -1,21 +1,29 @@
 This folder contains projections.ods and projDefinitions.sav
+low/ and high/ subfolders contain Shapefiles used by, e.g., MAP_CONTINENTS.
 
 projection.ods describes the projections currently known by proj4 (https://proj4.org/operations/projections) with their short name, full name, peculiarities, required parameters, optional parameters, projection scale.
 
-One can update projections.ods each time a new projection comes available.
-The .ods can give a .csv copy that can be read with, e.g.
-?DL> csv_proj=read_csv("projections.csv",n_table=1)
-?DL> save,csv_proj,filename="csv.sav
-(note that read_csv is not distributed with GDL at the time, help welcome).
+One can update projections.ods each time a new projection comes available, and submit a PR for GDL at Github.
 
-the csv.sav file is then converted to adequate structures with  'map_proj_auxiliary_read_csv' hidden in map_proj_init.pro, structures that are saved by this procedure in projDefinitions.sav 
+The procedure from the .ods to a working GDL database of projectiosn is a bit tricky (try to do better!)
+
+The .ods can give a .csv copy, e.g.:
+
+soffice --headless --convert-to csv projections.ods
+
+The .csv can be read with GDL:
+
+csv_proj=read_csv("projections.csv",n_table=1)
+save,csv_proj,filename="csv.sav
+
+the csv.sav file is then converted to adequate structures with  'map_proj_auxiliary_read_csv' hidden in map_proj_init.pro (just .compile it), structures that are saved by this procedure are then in projDefinitions.sav 
 
 At that moment, projDefintions.sav has been updated and all the projection related procedures (map_set, etc) are aware of the new projection(s). Of course, these files should be installed properly (by a "make install"), in gnudatalanguage/resource/maps.
 
-it is important to note in the "hints" column the type of projection (for correct clips or horizon) and also if they support rotation of coordinates (some do not and that would probably result in a crash of the proj4 library.)
+It is important to note in the "hints" column the type of projection (for correct clips or horizon) and also if they support rotation of coordinates (some do not and that would probably result in a crash of the proj4 library.)
 
-specifics for interrupted projections (where are the splits) must be added in map_proj_init.pro and map_horizon.pro (nothing is ever easy). 
+Specifics for interrupted projections (where are the splits) must be added in map_proj_init.pro and map_horizon.pro (nothing is ever easy). 
 
-good hack.
+Good hack.
 Gilles
 
