--- a/doc/gdl.1
+++ b/doc/gdl.1
@@ -99,6 +99,9 @@ where "()" are for functions and "[]" are for arrays.
 This speeds up (sometimes terribly) compilation but choke on every use of "()" with arrays.
 Conversion of procedures to modern IDL can be done with D. Landsman's idlv4_to_v5 procedure.
 Use enviromnment variable "GDL_IS_FUSSY" to set up permanently this feature.
+
+Incidentally "being fussy" can help find all places in a procedure 
+that need to be corrected to have it in the modern IDL format.
 .TP
 .B \-\-sloppy
 inverse of fussy above.
@@ -113,8 +116,12 @@ Also enabled by setting the environment variable GDL_USE_WX to a non-null value.
 Tells GDL no to use WxWidgets graphics, even if env. var. "GDL_USE_WX" is set.
 .TP
 .B \-\-no-dSFMT
-Tells GDL not to use double precision SIMD oriented Fast Mersenne Twister(dSFMT) for random doubles.
+Tells GDL not to use double precision SIMD oriented Fast Mersenne Twister(dSFMT) for random values.
 Also disabled by setting the environment variable GDL_NO_DSFMT to a non-null value.
+
+With dSFMT, although the Mersenne Twister algorithm is the same as in modern IDL, the values are
+computed in parallel (hence a speed gain) but the output order is not the same as IDL. Also, the seed is different.
+Theses differences should not be a problem as it is discouraged to interfere with seed values.
 
 
 The \-demo, \-em, \-novm, \-queue, \-rt, \-ulicense and \-vm options
