Update PROJ support

--- a/obsolete/ChangeLog-till-0.9.6
+++ b/obsolete/ChangeLog-till-0.9.6
@@ -8503,7 +8503,7 @@ GDL 0.9:
 
 	* src/libinit.cpp, src/libinit_jmg.cpp:
 	moving new SA declarations from "libinit.cpp" to "libinit_jmg.cpp" to keep map_* together and protected by
-	the optionnal block for LIBPROJ4  #if defined(USE_LIBPROJ4)
+	the optionnal block for LIBPROJ4  #if defined(USE_LIBPROJ)
 
 	* src/pro/ludc.pro:
 	LUDC.pro: initial import of a fake one to be able to run the full time_test3 suite
