--- a/README
+++ b/README
@@ -91,7 +91,7 @@ HDF4 *)     ftp://ftp.ncsa.uiuc.edu/HDF/HDF/HDF_Current
 HDF5        ftp://ftp.ncsa.uiuc.edu/HDF/HDF5/current
 FFTW        http://www.fftw.org/download.html
 python      http://www.python.org
-libproj4    (consult the MAP_INSTALL file)
+PROJ        (consult the MAP_INSTALL file)
 UDUNITS2    http://www.unidata.ucar.edu/software/udunits/
 GRIB API    http://www.ecmwf.int/products/data/software/grib_api.html        
 shapelib    http://shapelib.maptools.org/ (consult the MAP_INSTALL file)
@@ -256,7 +256,7 @@ DATA FORMATS:
 MAP PROJECTIONS and GEOPHYSICS:
 ----------------
   GDL contains now a complete support to MAP projection,
-  using the proj library (www.proj.org). Please see MAP_INSTALL file.
+  using the PROJ library (www.proj.org). Please see MAP_INSTALL file.
   Note that GDL gives access to all proj.org projections instead of the 20 or so of IDL.
 
   GDL uses libshp (shapelib) to implement MAP_CONTINENTS - see MAP_INSTALL.
