--- a/doc/gdl.1
+++ b/doc/gdl.1
@@ -58,7 +58,7 @@ http://idlastro.gsfc.nasa.gov/idl_html_help/home.html
 
 A vast part of GDL library routines is implemented using open\-source
 libraries including GSL, plPlot, and optionally: readline, FFTW, Eigen3,
-ImageMagick, netCDF, HDF4, HDF5, libproj4, UDUNITS\-2, libps and
+ImageMagick, netCDF, HDF4, HDF5, PROJ, UDUNITS\-2, libps and
 others.
 .SH OPTIONS
 .TP
