--- a/AUTHORS
+++ b/AUTHORS
@@ -4,11 +4,11 @@ Project founder:
   
 Key maintainers:
 
-  Alain Coulais (github: alaingdl)
+  Alain Coulais (github: alaingdl) (AC)
   Gilles Duvert (github: GillesDuvert)
 
 Contributors (in many different ways: from incorporation of tiny code snippets, 
-  through maintanance, packaging to major code contributions; in alphabetical order):
+  through maintenance, packaging to major code contributions; in alphabetical order):
 
   Juan A. Añel
   Sylwester Arabas (github: slayoo) 
@@ -21,33 +21,35 @@ Contributors (in many different ways: from incorporation of tiny code snippets,
   Markus Dittrich
   Takeshi Enomoto
   Sébastien Fabbro
-  Sylvain Flinois
+  Sylvain Flinois (AC' intern)
   Orlando Garcia Feal
   Christoph Fuchs
   Joel Gales (SF: jomoga)
-  Nicolas Galmiche
+  Nicolas Galmiche (AC' intern)
   Sergio Gelato
+  Thibault Huillet (AC' intern)
   Greg Huey
   Grgory Jung (github: maynardGK),
   Lutz Kettner
   Gaurav Khanna (SF: khanna)
   Jos de Kloe
-  Benjamin Laurent
+  Benjamin Laurent (AC' intern)
   Justin Lecher
   Christopher Lee (SF: c_lee)
-  Maxime Lenoir
-  Gregory Marchal
+  Maxime Lenoir (AC' intern)
+  Gregory Marchal (AC' intern)
   Sébastien Maret
   Craig B. Markwardt
-  Thibaut Mermet
+  Thibaut Mermet (AC' intern)
   Peter Messmer (SF: messmer) 
-  Léa Noreskal
+  Léa Noreskal (AC' intern)
   Jeong Bin Park
-  Mathieu Pinter 
+  Mathieu Pinter (AC' intern)
   Orion Poplawski 
   Rene Preusker
   Paul Ricchiazzi
-  Amar Si Lounis
+  Eloi Rozier de Linage (AC' intern)
+  Amar Si Lounis (AC' intern)
   Marius Schamschula
   Richard Schwartz
   Gürkan Sengün
