updates to paper

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@book{Fanning_et_al_2003,
+@book{Fanning_2003,
   author = {Fanning, D.W.},
   title = {IDL Programming Techniques},
   url = {http://worldcat.org/oclc/249962947},
