add some papers using IDL

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -88,3 +88,68 @@ archivePrefix = {arXiv},
        eprint = {1909.02371},
 }
 
+@article{burrage2021cardiac,
+  title={Cardiac stress T1-mapping response and extracellular volume stability of MOLLI-based T1-mapping methods},
+  author={Burrage, Matthew K and Shanmuganathan, Mayooran and Zhang, Qiang and Hann, Evan and Popescu, Iulia A and Soundarajan, Rajkumar and Chow, Kelvin and Neubauer, Stefan and Ferreira, Vanessa M and Piechnik, Stefan K},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={1--13},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{coates2019high,
+  title={High-performance suction feeding in an early elasmobranch},
+  author={Coates, Michael I and Tietjen, Kristen and Olsen, Aaron M and Finarelli, John A},
+  journal={Science advances},
+  volume={5},
+  number={9},
+  pages={eaax2742},
+  year={2019},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{xiao2022superheating,
+  title={Superheating of grain boundaries within bulk colloidal crystals},
+  author={Xiao, Xiuming and Wang, Lilin and Wang, Zhijun and Wang, Ziren},
+  journal={Nature Communications},
+  volume={13},
+  number={1},
+  pages={1--9},
+  year={2022},
+  publisher={Nature Publishing Group}
+}
+
+@article{lee2022transboundary,
+  title={Transboundary aerosol transport process and its impact on aerosol-radiation-cloud feedbacks in springtime over Northeast Asia},
+  author={Lee, Hyo-Jung and Jo, Yu-Jin and Kim, Seungwoo and Kim, Daecheol and Kim, Jong-Min and Choi, Daniel and Jo, Hyun-Young and Bak, Juseon and Park, Shin-Young and Jeon, Wonbae and others},
+  journal={Scientific Reports},
+  volume={12},
+  number={1},
+  pages={1--10},
+  year={2022},
+  publisher={Nature Publishing Group}
+}
+
+@article{castro2021very,
+  title={Very-high-frequency oscillations in the main peak of a magnetar giant flare},
+  author={Castro-Tirado, Alberto J and {\O}stgaard, N and G{\"o}ǧ{\"u}{\c{s}}, E and S{\'a}nchez-Gil, C and Pascual-Granado, J and Reglero, V and Mezentsev, A and Gabler, M and Marisaldi, M and Neubert, T and others},
+  journal={Nature},
+  volume={600},
+  number={7890},
+  pages={621--624},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{chen2021orf3a,
+  title={ORF3a of SARS-CoV-2 promotes lysosomal exocytosis-mediated viral egress},
+  author={Chen, Di and Zheng, Qiaoxia and Sun, Long and Ji, Mingming and Li, Yan and Deng, Hongyu and Zhang, Hong},
+  journal={Developmental Cell},
+  volume={56},
+  number={23},
+  pages={3250--3263},
+  year={2021},
+  publisher={Elsevier}
+}
